# py32-i2c-gamepad

./: .gitignore  CMakeLists.txt  gpio.h  main.cpp  py32f002ax5.ld  py32f002ax5.toolchain  startup_py32f002a.s  uart.c  uart.h
hw/: py32-gamepad.kicad_pcb  py32-gamepad.kicad_pro  py32-gamepad.kicad_sch
